log
Sat, May 17, 2025  9:48:20 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  9:49:02 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
78e51ed
Sat, May 17, 2025 11:33:30 PM: 
 sudoku.c | 49 ++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 48 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'existe':
sudoku.c:54:12: error: comparison between pointer and integer [-Werror]
     if(num == numero) return 0;
            ^~
sudoku.c: In function 'is_valid':
sudoku.c:70:19: error: passing argument 1 of 'existe' makes pointer from integer without a cast [-Werror=int-conversion]
         if(existe(numero1, columna) || existe(numero2,fila))
                   ^~~~~~~
sudoku.c:46:5: note: expected 'List * {aka struct List *}' but argument is of type 'int'
 int existe(List* lista, int numero)
     ^~~~~~
sudoku.c:70:28: error: passing argument 2 of 'existe' makes integer from pointer without a cast [-Werror=int-conversion]
         if(existe(numero1, columna) || existe(numero2,fila))
                            ^~~~~~~
sudoku.c:46:5: note: expected 'int' but argument is of type 'List * {aka struct List *}'
 int existe(List* lista, int numero)
     ^~~~~~
sudoku.c:70:47: error: passing argument 1 of 'existe' makes pointer from integer without a cast [-Werror=int-conversion]
         if(existe(numero1, columna) || existe(numero2,fila))
                                               ^~~~~~~
sudoku.c:46:5: note: expected 'List * {aka struct List *}' but argument is of type 'int'
 int existe(List* lista, int numero)
     ^~~~~~
sudoku.c:70:55: error: passing argument 2 of 'existe' makes integer from pointer without a cast [-Werror=int-conversion]
         if(existe(numero1, columna) || existe(numero2,fila))
                                                       ^~~~
sudoku.c:46:5: note: expected 'int' but argument is of type 'List * {aka struct List *}'
 int existe(List* lista, int numero)
     ^~~~~~
sudoku.c:85:25: error: passing argument 1 of 'existe' makes pointer from integer without a cast [-Werror=int-conversion]
               if(existe(numero3, cuadricula)) return 1;
                         ^~~~~~~
sudoku.c:46:5: note: expected 'List * {aka struct List *}' but argument is of type 'int'
 int existe(List* lista, int numero)
     ^~~~~~
sudoku.c:85:34: error: passing argument 2 of 'existe' makes integer from pointer without a cast [-Werror=int-conversion]
               if(existe(numero3, cuadricula)) return 1;
                                  ^~~~~~~~~~
sudoku.c:46:5: note: expected 'int' but argument is of type 'List * {aka struct List *}'
 int existe(List* lista, int numero)
     ^~~~~~
cc1.exe: all warnings being treated as errors
0d10a25
Sat, May 17, 2025 11:34:20 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'existe':
sudoku.c:54:12: error: comparison between pointer and integer [-Werror]
     if(num == numero) return 0;
            ^~
cc1.exe: all warnings being treated as errors
19e7a7f
Sat, May 17, 2025 11:34:55 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'existe':
sudoku.c:53:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     int num = (int*)dato;
               ^
cc1.exe: all warnings being treated as errors
8867eaa
Sat, May 17, 2025 11:35:53 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'existe':
sudoku.c:50:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
   int dato = first(lista);
              ^~~~~
sudoku.c:51:14: error: comparison between pointer and integer [-Werror]
   while(dato != NULL)
              ^~
sudoku.c:55:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato = next(lista);
          ^
cc1.exe: all warnings being treated as errors
597d72b
Sat, May 17, 2025 11:36:54 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
9d4b26c
Sat, May 17, 2025 11:38:04 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a652bdd
Sat, May 17, 2025 11:39:26 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
fba582c
Sat, May 17, 2025 11:40:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a2f4ddb
Sat, May 17, 2025 11:41:08 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:74:27: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
         pushBack(columna, numero1);
                           ^~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:75:23: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
         pushBack(fila,numero2);
                       ^~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:86:36: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
               pushBack(cuadricula, numero3);
                                    ^~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
c0ec521
Sat, May 17, 2025 11:41:43 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
06cff04
Sat, May 17, 2025 11:48:30 PM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|4
total_score: 15/70
528c829
Sat, May 17, 2025 11:54:04 PM: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4533658
Sun, May 18, 2025 12:07:47 AM: 
 sudoku.c | 74 ++++++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 49 insertions(+), 25 deletions(-)
 tests:  2|4
total_score: 15/70
37711b0
Sun, May 18, 2025 12:23:00 AM: 
 sudoku.c | 66 ++++++++++++++++++++++------------------------------------------
 1 file changed, 22 insertions(+), 44 deletions(-)
 tests:  5|3
total_score: 35/70
a6ef7da
Sun, May 18, 2025 12:24:41 AM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
18489d4
Sun, May 18, 2025 12:26:07 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
979005e
